feat : keep broker logic only

--- a/broker/requirements.txt
+++ b/broker/requirements.txt
@@ -5,6 +5,9 @@ gunicorn
 # Docker SDK
 docker
 
+# Kubernetes SDK (optional, only needed for Kubernetes backend)
+kubernetes
+
 # HTTP client
 requests
 
