--- a/config/broker.yml
+++ b/config/broker.yml
@@ -158,6 +158,15 @@ security:
   #   python3 -c "import secrets; print(secrets.token_urlsafe(32))"
   api_key: ""
 
+  # Rate limiting configuration
+  rate_limiting:
+    # Enable/disable rate limiting
+    enabled: true
+    # Default limit for all endpoints (GET, etc.)
+    default_limit: "200/minute"
+    # Stricter limit for write endpoints (POST, PUT, DELETE)
+    admin_limit: "10/minute"
+
 # -----------------------------------------------------------------------------
 # Logging
 # -----------------------------------------------------------------------------
