--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ show_error_codes = true
 
 [[tool.mypy.overrides]]
 module = [
+    "alembic.*",
     "docker.*",
     "kubernetes.*",
     "psycopg2.*",
