--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ show_error_codes = true
 module = [
     "alembic.*",
     "docker.*",
+    "flasgger.*",
     "kubernetes.*",
     "psycopg2.*",
     "flask_limiter.*",
