--- a/chart/templates/secret.yaml
+++ b/chart/templates/secret.yaml
@@ -1,3 +1,15 @@
+{{- if and .Values.apiKey.value (not .Values.apiKey.existingSecret) }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "guacamole-broker.fullname" . }}-api-key
+  labels:
+    {{- include "guacamole-broker.labels" . | nindent 4 }}
+type: Opaque
+data:
+  api-key: {{ .Values.apiKey.value | b64enc | quote }}
+{{- end }}
+---
 {{- if not .Values.guacamole.existingSecret }}
 apiVersion: v1
 kind: Secret
