--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -66,6 +66,20 @@ spec:
                 secretKeyRef:
                   name: {{ include "guacamole-broker.databaseSecretName" . }}
                   key: {{ .Values.database.existingSecretKey | default "password" }}
+            # Database pool
+            - name: DB_POOL_MIN
+              value: {{ .Values.databasePool.minConnections | quote }}
+            - name: DB_POOL_MAX
+              value: {{ .Values.databasePool.maxConnections | quote }}
+            # API key authentication
+            - name: BROKER_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "guacamole-broker.apiKeySecretName" . }}
+                  key: {{ .Values.apiKey.existingSecretKey | default "api-key" }}
+            # Logging
+            - name: LOG_LEVEL
+              value: {{ .Values.logging.level | quote }}
             # Orchestrator settings
             - name: ORCHESTRATOR_BACKEND
               value: "kubernetes"
