--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: guacamole-broker
+name: guacamole-webapp-gateway
 description: Session Broker for Apache Guacamole - manages VNC container lifecycle
 type: application
 version: 1.0.0
