--- a/chart/templates/secret.yaml
+++ b/chart/templates/secret.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "guacamole-broker.fullname" . }}-api-key
+  name: {{ include "guacamole-webapp-gateway.fullname" . }}-api-key
   labels:
-    {{- include "guacamole-broker.labels" . | nindent 4 }}
+    {{- include "guacamole-webapp-gateway.labels" . | nindent 4 }}
 type: Opaque
 data:
   api-key: {{ .Values.apiKey.value | b64enc | quote }}
@@ -14,9 +14,9 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "guacamole-broker.fullname" . }}-guacamole
+  name: {{ include "guacamole-webapp-gateway.fullname" . }}-guacamole
   labels:
-    {{- include "guacamole-broker.labels" . | nindent 4 }}
+    {{- include "guacamole-webapp-gateway.labels" . | nindent 4 }}
 type: Opaque
 data:
   password: {{ .Values.guacamole.adminPassword | b64enc | quote }}
@@ -26,9 +26,9 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "guacamole-broker.fullname" . }}-database
+  name: {{ include "guacamole-webapp-gateway.fullname" . }}-database
   labels:
-    {{- include "guacamole-broker.labels" . | nindent 4 }}
+    {{- include "guacamole-webapp-gateway.labels" . | nindent 4 }}
 type: Opaque
 data:
   password: {{ .Values.database.password | b64enc | quote }}
@@ -38,9 +38,9 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "guacamole-broker.fullname" . }}-vault
+  name: {{ include "guacamole-webapp-gateway.fullname" . }}-vault
   labels:
-    {{- include "guacamole-broker.labels" . | nindent 4 }}
+    {{- include "guacamole-webapp-gateway.labels" . | nindent 4 }}
 type: Opaque
 data:
   {{- if .Values.vault.token }}
