--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "guacamole-broker.fullname" . }}
+  name: {{ include "guacamole-webapp-gateway.fullname" . }}
   labels:
-    {{- include "guacamole-broker.labels" . | nindent 4 }}
+    {{- include "guacamole-webapp-gateway.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "guacamole-broker.selectorLabels" . | nindent 4 }}
+    {{- include "guacamole-webapp-gateway.selectorLabels" . | nindent 4 }}
